Encore training and lineforllower improved

--- a/encore/templates/article/homepage.html.twig
+++ b/encore/templates/article/homepage.html.twig
@@ -11,7 +11,7 @@
                 <!-- H1 Article -->
                 <a class="main-article-link" href="#">
                     <div class="main-article mb-5 pb-3">
-                        <img src="{{ asset('images/meteor-shower.jpg') }}" alt="meteor shower">
+                        <img src="{{ asset('build/images/meteor-shower.jpg') }}" alt="meteor shower">
                         <h1 class="text-center mt-2">Ursid Meteor Shower: <br>Healthier than a regular shower?</h1>
                     </div>
                 </a>
@@ -32,7 +32,7 @@
                                 </small>
                             {% endfor %}
                             <br>
-                            <span class="align-left article-details"><img class="article-author-img rounded-circle" src="{{ asset('images/alien-profile.png') }}"> {{ article.author }} </span>
+                            <span class="align-left article-details"><img class="article-author-img rounded-circle" src="{{ asset('build/images/alien-profile.png') }}"> {{ article.author }} </span>
                             <span class="pl-5 article-details float-right"> {{ article.publishedAt ? article.publishedAt|ago }}</span>
                         </div>
                     </a>
